# presence-AI

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
agents/: __init__.py  base_agent.py  builder_agent.py  companion_agent.py  learning_agent.py  orchestrator.py  planner_agent.py  screen_agent.py
ai/: __init__.py  ai_router.py  cloud_ai_engine.py  cognitive_router.py  engine_health.py  gemini_engine.py  groq_engine.py  hybrid_synthesizer.py  local_ai_engine.py  mode_classifier.py  model_lock.py  rate_limiter.py  schema_validator.py  task_analyzer.py
builder/: __init__.py  builder_controller.py  criteria_checker.py  file_executor.py  file_validator.py  goal_parser.py  project_planner.py  repair_loop.py  result_checker.py  terminal_runner.py
chat/: __init__.py  input_handler.py  llm_bridge.py  output_renderer.py
core/: __init__.py  config.py  event_bus.py  logger.py  startup.py
memory/: __init__.py  memory_index.py  recall_engine.py  reminder_engine.py  schema.py  session_manager.py  store.py
planner/: __init__.py  task_structurer.py
reasoning/: __init__.py  goal_analyzer.py
scheduler/: __init__.py  follow_up.py
screen/: __init__.py  capture.py  context_classifier.py  ocr.py
system/: __init__.py  cost_guard.py  process_lock.py  safety_guard.py  shutdown_manager.py  usage_tracker.py
ui/: __init__.py  animation_engine.py  chat_panel.py  presence_orb.py  state_animator.py  state_engine.py  tray_icon.py
voice/: __init__.py  pipeline.py  stt.py  tts.py  vad.py
