[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "presence-ai"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "core*",
    "ui*",
    "voice*",
    "chat*",
    "screen*",
    "memory*",
    "agents*",
    "reasoning*",
    "planner*",
    "scheduler*",
    "learning*",
]
